...
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_flag" />
                        <TextView
                            android:id="@+id/state_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/state"
                            tools:text="TODO"/>
                        <ImageButton
                            android:id="@+id/state_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
                    </LinearLayout>

...
